# nymtc-spf-repro

./: .dockerignore  .gitignore  CITATION.cff  DOCS.md  Dockerfile  LICENSE  PUBLISHING_TO_GITHUB.md  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  run_all.py
data/: 01_0108_Day_of_Week_Time_of_Day.xlsx  05_0506_Day_of_Week_Time_of_Day.xlsx  Contributing_Factors.DEPRECATED.xlsx  Contributing_Factors_corrected.csv  Crashes_With_Contributing_Factors.xlsx  Crashes_With_Environmental_Factors.xlsx  Crashes_With_Human_Factors.xlsx  Crashes_With_Vehicular_Factors.xlsx  F_SI_C_Rates_Cleaned.csv  README.md  capital_district_rates.csv  njtpa_panel.csv
outputs/: cd_second_region_irr.csv  cd_vs_national.csv  covariate_adjusted_irr.csv  covariate_baseline_irr.csv  covariate_panel.csv  exhibit_counts_vs_rates.csv  irr_crashes.csv  irr_fatalities.csv  irr_serious.csv  njtpa_third_region_irr.csv  nymtc_safety_panel.csv  r11_vmt_sensitivity.csv  r3_wrong_vs_right.csv  r4_grid_inverted_ci.csv  r4_wildbootstrap_inference.csv  v2_coverage_table.csv  v2_instability_grid.csv  v3_national_fars_series.csv  worked_example.csv
src/: 01_verify_vmt_provenance.py  02_spf_model.py  03_wild_cluster_bootstrap.py  04_grid_inverted_wcr.py  05_fig_divergence.py  06_wrong_vs_right.py  09_simulation_instability.py  10_simulation_coverage.py  11_national_benchmark.py  12_figures_redesign.py  13_worked_example.py  14_second_region.py  15_third_region.py  16_vmt_sensitivity.py  17_covariate_extension.py
tests/: run_tests.py  test_bootstrap_ci.py  test_covariate_extension.py  (+3 more)
(+1 files in other folders)
